# SearchEngine

./: .env.template  .gitignore  Dockerfile  LICENSE  config.yaml  main.py
crawler/: Makefile  pyproject.toml
db/: schema.sql
dev/: docker-compose.yaml
terraform/: .terraform.lock.hcl  main.tf  providers.tf
terraform/hack/: apply.sh  import.sh
